--- a/DeviceManager/Views/Shared/_Layout.cshtml
+++ b/DeviceManager/Views/Shared/_Layout.cshtml
@@ -247,7 +247,7 @@
 
     <footer class="border-top footer text-muted py-3">
         <div class="container text-center fw-semibold">
-            &copy; @DateTime.Now.Year DeviceManager By Idris
+            &copy; @DateTime.Now.Year DeviceManager
         </div>
     </footer>
 
