--- a/DeviceManager/Views/Technicians/Index.cshtml
+++ b/DeviceManager/Views/Technicians/Index.cshtml
@@ -10,9 +10,10 @@
 } *@
 
 
-<div class="container py-5">
+<div class="container py-3">
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2>Technicians</h2> <a asp-action="Create" class="btn btn-primary">Add Technician</a> 
+        <h2>Technicians</h2> 
+        @* <a asp-action="Create" class="btn btn-primary">Add Technician</a>  *@
     </div>
 </div>
 
